# chess

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
engine/board/: Cargo.toml
engine/board/src/: lib.rs  mov.rs
engine/board/src/pieces/: mod.rs  pawn.rs
frontend/: Cargo.toml
frontend/src-tauri/: tauri.conf.json
